# askly

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20240314023455_create_questions_table.up.sql  20240316071908_create_answers_table.up.sql  20240316145916_create_users_table.up.sql  20240319070426_add_user_id_to_questions.down.sql  20240319070426_add_user_id_to_questions.up.sql  20240320121957_add_user_id_to_answers.down.sql  20240320121957_add_user_id_to_answers.up.sql
src/: error.rs  lib.rs  main.rs  store.rs
src/domain/: answer.rs  mod.rs  question.rs  user.rs
src/routes/: answer.rs  mod.rs  question.rs  user.rs
